styles.css
:root {
    /* Defines the global colors */
    --clr-grey-500: hsl(234, 12%, 34%); /* default color */
    --clr-grey-400: hsl(212, 6%, 44%);
    --clr-red: hsl(0, 78%, 62%);
    --clr-cyan: hsl(180, 62%, 55%);
    --clr-blue: hsl(212, 86%, 64%);
    --clr-orange: hsl(34, 97%, 64%);

    /* Defines variables based on functionality */
    --card-supervisor-border: var(--clr-cyan);
    --card-team-builder-border: var(--clr-red);
    --card-karma-border: var(--clr-orange);
    --card-calculator-border: var(--clr-blue);
    --card-paragraph: var(--clr-grey-400);
}

/* Basic CSS reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    color: var(--clr-grey-500);
    margin-top: 56px;
}

main {
    margin: auto;
}

.title-container {
    margin: auto;
    max-width: 60ch;
}

.title {
    font-size: 1.5rem;
    line-height: 1.4;
    letter-spacing: 0.25px;
    font-weight: 200;

    .title--bold {
        font-weight: 600;
        display: block;
    }
}

.title, .subtitle {
    text-align: center;
}

.subtitle {
    margin: 16px 0 64px 0;
}

.cards-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.card {
    width: 314px;
    height: 250px;
    
    padding: 2rem;
    padding-bottom: 8rem;
    margin-bottom: 2rem;

    border-top: 4px solid;
    border-radius: 5px;
    box-shadow: rgba(0, 40, 120, 0.15) 0px 8px 15px;

    position: relative;

    img {
        position: absolute;
        bottom: 32px;
        right: 32px;
    }
}

.card__title {
    font-size: 1.25rem;
}

.card__description {
    font-size: 0.813rem;
    color: var(--card-paragraph);
    margin-bottom: 2rem;
}

.card--supervisor {
    border-color: var(--card-supervisor-border);
}

.card--team-builder {
    border-color: var(--card-team-builder-border);
}

.card--karma {
    border-color: var(--card-karma-border);
}

.card--calculator {
    border-color: var(--card-calculator-border);
}

/* Tablet Responsive */
@media (min-width: 768px) {
    .title {
        font-size: 2.25rem;
    }

    .cards-container {
        display: grid;
        /* Columns are half of the cards' width to make the diamond shape */
        grid-template-columns: repeat(4, 167px);
        grid-template-rows: repeat(3, 1fr);
        gap: 8px;

        /* Width max-content to center the grid with margin auto */
        width: max-content;
        margin: 0 auto;
        gap: 2rem;
    }

    .card {
        margin: 0;
    }

    .card--team-builder {
        grid-column: 2 / span 2;
        align-self: end;
        justify-self: center;
    }

    .card--supervisor {
        grid-row: 2;
        grid-column: 1 / span 2;
        justify-self: end;
    }

    .card--karma {
        grid-row: 2;
        grid-column: 3;
    }

    .card--calculator {
        grid-row: 3;
        grid-column: 2 / span 2;
        justify-self: center;
    }
}

@media (min-width: 1440px) {

    .cards-container {
        grid-template-columns: repeat(3, 350px);
        grid-template-rows: repeat(4, 125px);
        gap: 2rem;
    }

    .card {
        width: 350px;
        margin: 0;
    }

    .card--team-builder {
        grid-row: 1 / span 2;
        grid-column: 2;
        align-self: end;
    }

    .card--supervisor {
        grid-row: 2 / span 2;
        grid-column: 1;
    }

    .card--calculator {
        grid-row: 2 / span 2;
        grid-column: 3;
    }

    .card--karma {
        grid-row: 3 / span 2;
        grid-column: 2;
        align-self: start;
    }
}

